k8s/text-generation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-generator-service
  labels:
    app: text-generator
spec:
  selector:
    app: text-generator
  ports:
  - port: 8000
    targetPort: http
    name: http
  - port: 8001
    targetPort: metrics
    name: metrics
  type: ClusterIP
