k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: api.ruanpiscitelli.com
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: dashboard-service
            port:
              number: 8000
      - path: /image
        pathType: Prefix
        backend:
          service:
            name: image-generator-service
            port:
              number: 8000
      - path: /voice
        pathType: Prefix
        backend:
          service:
            name: voice-generator-service
            port:
              number: 8000
      - path: /video
        pathType: Prefix
        backend:
          service:
            name: video-generator-service
            port:
              number: 8000
      - path: /video-edit
        pathType: Prefix
        backend:
          service:
            name: video-editor-service
            port:
              number: 8000
      - path: /text
        pathType: Prefix
        backend:
          service:
            name: text-generator-service
            port:
              number: 8000
